microconfig-core/src/test/resources/repo/components/exceptions/bad/cyclic/cyclicDetectBetweenConfigTypes/exception.dev
Can't build configs for root component 'cyclicDetectBetweenConfigTypes[dev]'.
Exception in '../components/exceptions/cyclic/cyclicDetectBetweenConfigTypes/service.properties:1'
Property: key=${process::this@key2}
Can't resolve ${process::this@key2}
Can't build configs for root component 'cyclicDetectBetweenConfigTypes[dev]'.
Exception in '../components/exceptions/cyclic/cyclicDetectBetweenConfigTypes/service.properties:1'
Can't resolve placeholder ${process::this@key2}